--- a/front/src/css/common.css
+++ b/front/src/css/common.css
@@ -1,6 +1,17 @@
+body {
+    margin: 0;
+    overflow-y: hidden;
+}
 header, footer{
     margin: 0 240px;
 }
+h2,h3,h4{line-height:1em;}
+
+
+h2{font-size:25px; font-weight:600;}
+h3{}
+h4{font-size:18px;}
+
 /* header */
 .header_bg {
     position: absolute; z-index: 9; width: 100%;
@@ -12,8 +23,13 @@ header {
     align-items: end;
 }
 
-header h1 {}
+header h1 {opacity:0; pointer-events:none; transition: 250ms ease-out; transition-delay:250ms;}
+.outer.white header h1 {opacity:1; pointer-events:auto; transition: 250ms ease-out; transition-delay:50ms;}
 /* header menu */
+.outer .dots_con .dots .dot{width:10px; height:10px; margin:5px; border:1px solid #000; border-radius:50%; transition: background 250ms ease-out;}
+.outer .dots_con .dots .dot.active{background:#000;}
+.outer.white .dots_con .dots .dot.active{background:#fff;}
+.outer.white .dots_con .dots .dot{border: 1px solid #fff; border-radius:50%; transition:background 250ms ease-out;}
 .menu {
     overflow: hidden;
     position: absolute;
@@ -46,7 +62,7 @@ margin: 0;
 }
 
 .burger-icon .burger-sticks {
-background: #fff;
+background: #000;
 display: block;
 height: 2px;
 position: relative;
@@ -56,13 +72,18 @@ width: 25px;
 
 .burger-icon .burger-sticks:before,
 .burger-icon .burger-sticks:after {
-background: #fff ;
+background: #000 ;
 content: '';
 display: block;
 height: 100%;
 position: absolute;
 transition: all .2s ease-out;
 width: 100%;
+}
+.outer.white .burger-icon .burger-sticks,
+.outer.white .burger-icon .burger-sticks:before,
+.outer.white .burger-icon .burger-sticks:after{
+    background: #fff;
 }
 
 .burger-icon .burger-sticks:before {
@@ -111,4 +132,26 @@ footer {text-align: center; padding: 15px 0 ;}
 footer p {}
 .footer_link, .footer_info{margin-bottom: 10px;}
 .footer_info li, footer p, address { color: #898989;} 
-
+  
+.outer {
+    height: 100vh;
+    overflow-y: auto;
+}
+  
+  /* 화면에서 스크롤바 안보이게 */
+.outer::-webkit-scrollbar {
+    display: none;
+}
+.three_con{
+    position:relative;
+    width:calc(100% + 25px);
+    margin:0 -12.5px;
+    height:inherit;
+}
+.three_con li{
+    width:calc(33.3333% - 25px);
+    margin:0 12.5px;
+    height:inherit;
+    background:#fff;
+    float:left;
+}
