--- a/front/src/css/main.css
+++ b/front/src/css/main.css
@@ -52,3 +52,28 @@ html, body {min-width: 1200px;}
 .change_bg1 {background-image: url(../../public/images/changebg2.jpg )  !important;}
 .change_bg2 {background-image: url(../../public/images/changebg1.png )  !important;}
 .change_bg3 {background-image: url(../../public/images/changebg3.jpg )  !important;}
+/*----------------------------------section01-----------------------------------------------------------------------------------------------------*/
+
+.sections{width: 100%; height: 100vh; position: relative; overflow: hidden;}
+.width_con{position:relative; width:1440px; height:100%; margin: 320px auto 0 auto; background:rgba(0,0,0,0.5);}
+
+.section_02{}
+.section_02 .width_con{background:transparent;}
+.section_02 .width_con .three_con{}
+.section_02 .width_con .three_con li{}
+.section_02 .width_con .three_con li .title{text-align:center;}
+.section_02 .width_con .three_con li .row{width:100%; height:1px; margin:15px 0; background:#000;}
+.section_02 .width_con .three_con li .desc{text-align:center;}
+.section_02 .width_con .three_con li .desc h2{line-height:1.5em;}
+.section_02 .width_con .three_con li .image{margin-top:60px; width:100%; height:100%; background:#eee; transition:all 250ms ease-out;}
+.section_02 .width_con .three_con li:nth-child(1) .image{background-image: url(../../public/images/section_02/image_01_black.jpg);}
+.section_02 .width_con .three_con li:nth-child(1):hover .image{background-image: url(../../public/images/section_02/image_01_color.jpg);}
+.section_02 .width_con .three_con li:nth-child(2) .image{background-image: url(../../public/images/section_02/image_02_black.jpg);}
+.section_02 .width_con .three_con li:nth-child(3) .image{background-image: url(../../public/images/section_02/image_03_black.jpg);}
+
+
+.section_03{background:#00f;}
+.section_03 .map{position:absolute; left:0; bottom:0; width:4000px; height:468px; background: linear-gradient(to right, rgba(255, 0, 0, 0.5), rgba(0, 38, 255, 0.5)); transition:all 250ms ease-out;}
+.section_04{background:#0ff;}
+.section_05{background:#ff0;}
+.section_06{background:#f00;}
