--- a/front/src/css/common.css
+++ b/front/src/css/common.css
@@ -11,6 +11,11 @@ h2,h3,h4{line-height:1em;}
 h2{font-size:25px; font-weight:600;}
 h3{}
 h4{font-size:18px;}
+h5{font-size:12px; line-height:1.5em;}
+
+.btn_a{position:relative; height:35px; font-size:18px;}
+.btn_a:hover img{transform:translateX(10px);}
+.btn_a img{position:absolute; left:0; bottom:0; transition:all 500ms ease-out;}
 
 /* header */
 .header_bg {
@@ -22,6 +27,7 @@ header {
     display: flex; flex-flow: row nowrap; justify-content: center;
     align-items: end;
 }
+header .line{position:fixed; left:194px; top:0; width:1px; height:100vh; background:#000;}
 
 header h1 {opacity:0; pointer-events:none; transition: 250ms ease-out; transition-delay:250ms;}
 .outer.white header h1 {opacity:1; pointer-events:auto; transition: 250ms ease-out; transition-delay:50ms;}
@@ -114,6 +120,12 @@ transform: rotate(-45deg);
 transform: rotate(45deg);
 }
 
+.burger-check:checked~.burger-icon .burger-sticks:before,
+.burger-check:checked~.burger-icon .burger-sticks:after{
+    background: #fff;
+}
+
+
 .burger-check:checked~.burger-icon:not(.steps) .burger-sticks:before,
 .burger-check:checked~.burger-icon:not(.steps) .burger-sticks:after {
 top: 0;
@@ -146,12 +158,13 @@ footer p {}
     position:relative;
     width:calc(100% + 25px);
     margin:0 -12.5px;
-    height:inherit;
+    height:100%;
+    overflow:hidden;
 }
 .three_con li{
     width:calc(33.3333% - 25px);
     margin:0 12.5px;
-    height:inherit;
+    height:100%;
     background:#fff;
     float:left;
 }
