--- a/front/src/css/reset.css
+++ b/front/src/css/reset.css
@@ -1,5 +1,6 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&family=Noto+Serif:wght@700&family=Noto+Sans:wght@800&display=swap');
+
 /* 이후 "SDGothic"으로 폰트 적용 가능 */
 /* reset */
 * {
