--- a/front/src/css/main.css
+++ b/front/src/css/main.css
@@ -54,8 +54,8 @@ html, body {min-width: 1200px;}
 .change_bg3 {background-image: url(../../public/images/changebg3.jpg )  !important;}
 /*----------------------------------section01-----------------------------------------------------------------------------------------------------*/
 
-.sections{width: 100%;height: 100vh; position: relative; overflow: hidden;}
-.width_con{position:relative; width:calc(100% - 480px); height:100%;  margin:320px 240px 23px 240px;}
+.sections{width: 100%;height: 100vh; position: relative; overflow: hidden; padding:320px 240px 23px 240px;}
+.width_con{position:relative; width:100%; height:100%;  }
 
 
 .box_con{position:absolute; right:0; top:0; width:464px; height:100%; padding:58px 25px;  border-top:solid 1px #000; background:#fff; text-align:left;}
@@ -80,18 +80,30 @@ html, body {min-width: 1200px;}
 .section_03{}
 .section_03 .map{position:absolute; left:0; bottom:23px; transition:all 250ms ease-out;}
 .section_03 .width_con{text-align:left;}
-.section_03 .width_con .box_con{position:absolute; right:0; top:0; width:464px; height:100%; padding:58px 25px;  border-top:solid 1px #000; background:#fff; text-align:left;}
+.section_03 .width_con .box_con{position:absolute; right:0; top:-63px; width:464px; height:100%; padding:58px 25px;  border-top:solid 1px #000; background:#fff; text-align:left;}
 .section_03 .width_con .row{width:68px; margin:30px 0;}
 .section_03 .width_con .btn_a{position:absolute; bottom:58px; line-height:35px;}
 
-.section_04{}
-.section_04 .width_con{z-index:1; margin:290px 240px 110px 240px;}
+.section_04{ padding:290px 240px 110px 240px;}
+.section_04 .width_con{z-index:1;}
 .section_04 .width_con .box_con{right:auto; left:0; background:rgba(255,255,255,.5);}
 .section_04 .image_box{position:absolute; right:10%; top:50%; width:50%; transform:translate(0,-50%);}
 .section_04 .image_box img{width:100%;}
 
 .section_05{background-image:url(../../public/images/section_05/image_01.png); background-position-y:bottom; background-repeat:no-repeat; background-size:contain; }
 
-.section_06{}
+.section_06{padding:0;}
+.section_06 .image{position:absolute; width:100%; height:100%; background:url(../../public/images/section_06/image_01.png); background-size:contain; z-index:1;}
+.section_06 .propmate_con{position:absolute; width:100%; height:100%; 
+    -webkit-mask-image: url("../../public/images/section_06/image_01.png");
+    -webkit-mask-repeat: no-repeat;
+    -webkit-mask-size: 100%;
+    mask-image: url("../../public/images/section_06/image_01.png");
+    mask-repeat: no-repeat;
+    mask-size: 100%;
+z-index:2;} 
+.section_06 .propmate_con .propmate{position:absolute; left:50%; top:40%; transform:translateX(-50%); font-size:342px; font-weight:800; line-height:1em; letter-spacing:-70px; font-family:'Noto Sans' }
 .section_06 .width_con{width:100%; height:100%; margin-left:194px;}
 .section_06 .bottom_line{position:absolute; bottom:25px; width:100%; height:1px; background:#000;}
+.section_06 .bottom_con {position:absolute; left:0; bottom:0; width:100%; height:53.6%; border-top:solid 1px #000;}
+.section_06 .bottom_con .one_box{width:194px; height:100%; background:#f0f;}
