--- a/front/src/css/common.css
+++ b/front/src/css/common.css
@@ -32,7 +32,24 @@ header .line{position:fixed; left:36px; top:0; width:1px; height:100vh; backgrou
 header h1 {opacity:0; pointer-events:none; transition: 250ms ease-out; transition-delay:250ms;}
 #root.white header h1 {opacity:1; pointer-events:auto; transition: 250ms ease-out; transition-delay:50ms;}
 /* header menu */
-#root .dots_con .dots .dot{width:10px; height:10px; margin:5px; border:1px solid #000; border-radius:50%; transition: background 250ms ease-out;}
+#root .dots_con .dots .dot{
+    width: 0px;
+    height: 0px;
+    border-right: 10px solid #666666;
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+    position: relative;
+    left: -50%;
+}
+#root .dots_con .dots .dot:after{
+    content: "";
+    border-left: 10px solid #666666;
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+    position: absolute;
+    top: -5px;
+    left: 10px;
+}
 #root .dots_con .dots .dot.active{background:#000;}
 #root.white .dots_con .dots .dot.active{background:#fff;}
 #root.white .dots_con .dots .dot{border: 1px solid #fff; border-radius:50%; transition:background 250ms ease-out;}
