--- a/front/src/css/common.css
+++ b/front/src/css/common.css
@@ -18,6 +18,7 @@ h5{font-size:12px; line-height:1.5em;}
 .btn_a img{position:absolute; left:0; bottom:0; transition:all 500ms ease-out;}
 
 /* header */
+.hide{opacity:0; pointer-events:none;}
 .header_bg {
     position: absolute; z-index: 9; width: 100%;
 }
@@ -27,32 +28,29 @@ header {
     display: flex; flex-flow: row nowrap; justify-content: center;
     align-items: end;
 }
-header .line{position:fixed; left:36px; top:0; width:1px; height:100vh; background:#000;}
-
+header .line{position:fixed; left:45px; top:0; width:1px; height:100vh; background:#d1d1d1; transition:opacity 250ms ease-out;}
 header h1 {opacity:0; pointer-events:none; transition: 250ms ease-out; transition-delay:250ms;}
 #root.white header h1 {opacity:1; pointer-events:auto; transition: 250ms ease-out; transition-delay:50ms;}
 /* header menu */
-#root .dots_con .dots .dot{
-    width: 0px;
-    height: 0px;
-    border-right: 10px solid #666666;
-    border-top: 5px solid transparent;
-    border-bottom: 5px solid transparent;
-    position: relative;
-    left: -50%;
+header .side_nav_con{
+    position:fixed;
+    top:50%;
+    left:36px;
+    transform:translateY(-50%);
+    z-index:9999;
+    transition:opacity 250ms ease-out; 
 }
-#root .dots_con .dots .dot:after{
-    content: "";
-    border-left: 10px solid #666666;
-    border-top: 5px solid transparent;
-    border-bottom: 5px solid transparent;
-    position: absolute;
-    top: -5px;
-    left: 10px;
+header .side_nav_con .cube{
+    position:absolute;
+    left:0;
+    top:0;
+    transition:all 500ms ease-out;
+    transform:translateY(-25%);
 }
-#root .dots_con .dots .dot.active{background:#000;}
-#root.white .dots_con .dots .dot.active{background:#fff;}
-#root.white .dots_con .dots .dot{border: 1px solid #fff; border-radius:50%; transition:background 250ms ease-out;}
+
+
+
+
 .menu {
     overflow: hidden;
     position: absolute;
