--- a/front/src/css/main.css
+++ b/front/src/css/main.css
@@ -83,7 +83,7 @@ html, body {}
 .section_02 .width_con .three_con li:nth-child(3):hover .image{background-image: url(../../public/images/section_02/image_03_color.jpg); background-size: cover;}
 
 .section_03{}
-.section_03 .map{position:absolute; left:200px; bottom:23px; transition:all 250ms ease-out;}
+.section_03 .map{position:absolute; bottom:23px; transition:all 250ms ease-out;}
 .section_03 .width_con{text-align:left;}
 .section_03 .width_con .box_con{}
 .section_03 .width_con .row{width:68px; margin:30px 0;}
@@ -115,7 +115,7 @@ html, body {}
 .section_06 .width_con{width:100%; height:100%; margin-left:194px;}
 .section_06 .bottom_line{position:absolute; bottom:25px; width:100%; height:1px; background:#000;}
 .section_06 .top_con {position:relative; width:100%; height:47%; padding-left:10%; z-index:1;}
-.section_06 .top_con .text_con{position:absolute; left:50%; top:50%; transform:translate(-50%,-50%);}
+.section_06 .top_con .text_con{position:absolute; left:50%; top:50%; transform:translate(-50%,-50%); white-space:nowrap;}
 .section_06 .top_con .text_con div{display: inline-block; margin:0 100px;}
 .section_06 .top_con .text_con .mail{}
 .section_06 .top_con .text_con div span{display: block; text-align: center;}
