--- a/front/src/css/main.css
+++ b/front/src/css/main.css
@@ -1,4 +1,4 @@
-html, body {}
+html, body {white-space:nowrap;}
 /* main */
 .section_01{
     background-image: url(../../public/images/mainbnr.jpg); background-size: cover;
